Replace PNG logo with SVG logo in sidebar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="layout">
   <aside class="sidebar collapsed" id="sidebar">
     <div class="brand">
-      <span class="logo"><img src="assets/fox.png" alt="Fox"></span>
+      <span class="logo"><img src="assets/fox.svg" alt="Fox"></span>
       <span class="brand-text"><b>Janorovic Volkov</b></span>
     </div>
     <nav>
