Add quotes from Janorovic Volkov and Alexander Suvorov

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
 anti-vandalisme, dan informatif ramah komunitas.
 Menyukai sistem yang rapih, transparan, dan manusiawi.</p>
+        <p><b>”Teknologi memberi kekuatan, filsafat memberi arah,
+keduanya bersatu dalam tangan mereka yang berani menggenggam masa depan”</b></p>
+        <h2>Janorovic Volkov</h2>
+        <p><b>”Satu menit dapat menentukan hasil pertempuran, 
+satu jam hasil operasi militer, dan satu hari nasib negara”</b></p>
+        <h2>Alexander Suvorov</h2>
       </div>
     </section>
   </main>
