Update HTML content and formatting

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <h2>Wikimedia Toolsmith & Fox-minded Engineer</h2>
         <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
 anti-vandalisme, dan informatif ramah komunitas.
-Menyukai sistem yang rapih, transparan, dan manusiawi.</p>
+Menyukai sistem yang rapih, transparan, dan manusiawi.</p><hr><br>
         <p><b>”Teknologi memberi kekuatan, filsafat memberi arah,
 keduanya bersatu dalam tangan mereka yang berani menggenggam masa depan”</b></p>
-        <h2>Janorovic Volkov</h2>
+        <h2>Janorovic Volkov</h2><br>
         <p><b>”Satu menit dapat menentukan hasil pertempuran, 
 satu jam hasil operasi militer, dan satu hari nasib negara”</b></p>
         <h2>Alexander Suvorov</h2>
