--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="profil">Profil</a>
       <a href="perkakas">Perkakas</a>
       <a href="kontak">Kontak</a>
-      <a href="penyangkalan">Penyangkalan</a>
+      <a href="penafian">Penafian</a>
       <hr><br>      
       <footer>
         <small><b>© <span id="year"></span> • Janorovic Volkov</b></small>
