Update title and headings from 'Penyangkalan' to 'Penafian'

--- a/penafian/index.html
+++ b/penafian/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Penyangkalan – Janorovic Volkov</title>
+  <title>Penafian – Janorovic Volkov</title>
   <link rel="icon" type="image/svg+xml" href="/assets/fox.svg">
   <link rel="stylesheet" href="/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 <div class="layout">
   <aside class="sidebar collapsed" id="sidebar">
     <div class="brand">
-      <span class="logo"><img src="assets/fox.svg" alt="Fox"></span>
+      <span class="logo"><img src="/assets/fox.svg" alt="Fox"></span>
       <span class="brand-text"><b>Janorovic Volkov</b></span>
     </div>
     <nav>
@@ -37,7 +37,8 @@
   <main class="content">
     <section class="profile">
       <div class="bio">
-        <h1>Penyangkalan</h1>
+        <h1>Penafian</h1>
+        <br>
         <p>Seluruh aktivitas saya, yang menggunakan nama Janorovic Volkov dan Radit Jibril Irawan, 
           di internet merupakan tindakan pribadi yang tidak mewakili instansi (Wikipedia atau Wikipedia bahasa Indonesia).
           <br><br>
