Update active class for navigation links

--- a/penafian/index.html
+++ b/penafian/index.html
@@ -19,11 +19,11 @@
       <span class="brand-text"><b>Janorovic Volkov</b></span>
     </div>
     <nav>
-      <a href="/" class="active">Beranda</a>
+      <a href="/">Beranda</a>
       <a href="/profil">Profil</a>
       <a href="/perkakas">Perkakas</a>
       <a href="/kontak">Kontak</a>
-      <a href="/penafian">Penafian</a>
+      <a href="/penafian" class="active">Penafian</a>
       <hr><br>      
       <footer>
         <small><b>© <span id="year"></span> • Janorovic Volkov</b></small>
