Fix HTML structure and element order
Rearranged HTML elements for better structure.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Wikimedia Toolsmith & Fox-minded Engineer</h2>
         <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
 anti-vandalisme, dan informatif ramah komunitas.
-Menyukai sistem yang rapih, transparan, dan manusiawi.</p><hr><br>
+Menyukai sistem yang rapih, transparan, dan manusiawi.</p><br><hr><br>
         <p><b>”Teknologi memberi kekuatan, filsafat memberi arah,
 keduanya bersatu dalam tangan mereka yang berani menggenggam masa depan”</b></p>
         <h2>Janorovic Volkov</h2><br>
