Add avatar section to profile in index.html

--- a/penafian/index.html
+++ b/penafian/index.html
@@ -36,6 +36,9 @@
   </aside>
   <main class="content">
     <section class="profile">
+      <div class="avatar">
+        <img src="/assets/info" alt="Informasi">
+      </div>
       <div class="bio">
         <h1>Penafian</h1>
         <br>
