Update avatar section to use logo span

--- a/penafian/index.html
+++ b/penafian/index.html
@@ -36,13 +36,13 @@
   </aside>
   <main class="content">
     <section class="profile">
-      <div class="avatar">
-        <img src="/assets/info" alt="Informasi">
-      </div>
+      <span class="logo">
+        <center><img src="/assets/info" alt="Informasi"></center>
+      </span>
       <div class="bio">
         <h1>Penafian</h1>
         <br>
-        <p>Seluruh aktivitas saya, yang menggunakan nama Janorovic Volkov dan Radit Jibril Irawan, 
+        <p>Seluruh aktivitas saya, yang menggunakan nama <b>Janorovic Volkov</b> dan <b>Radit Jibril Irawan</b>, 
           di internet merupakan tindakan pribadi yang tidak mewakili instansi (Wikipedia atau Wikipedia bahasa Indonesia).
           <br><br>
           Seluruh tulisan saya di sini masuk dalam kategori opini dan tidak dapat digunakan sebagai rujukan untuk karya ilmiah dalam bentuk apapun.</p>
