--- a/penafian/index.html
+++ b/penafian/index.html
@@ -37,7 +37,7 @@
   <main class="content">
     <section class="profile">
       <span class="logo">
-        <center><img src="/assets/info" alt="Informasi"></center>
+        <center><img src="/assets/info.svg" alt="Informasi"></center>
       </span>
       <div class="bio">
         <h1>Penafian</h1>
