Change logo span to icon span in index.html

--- a/penafian/index.html
+++ b/penafian/index.html
@@ -36,7 +36,7 @@
   </aside>
   <main class="content">
     <section class="profile">
-      <span class="logo">
+      <span class="icon">
         <center><img src="/assets/info.svg" alt="Informasi"></center>
       </span>
       <div class="bio">
