--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Beranda – Janorovic Volkov</title>
-  <link rel="icon" type="image/svg+xml" href="assets/fox.svg">
+  <link rel="icon" type="image/png" href="/assets/fox.png" sizes="32x32">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
