--- a/penafian/index.html
+++ b/penafian/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Penafian – Janorovic Volkov</title>
+  <link rel="icon" type="image/png" href="/assets/fox.png" sizes="32x32">
   <link rel="icon" type="image/svg+xml" href="/assets/fox.svg">
   <link rel="stylesheet" href="/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
