Fix image path and update link text in index.html

--- a/profil/index.html
+++ b/profil/index.html
@@ -15,7 +15,7 @@
 <div class="layout">
   <aside class="sidebar collapsed" id="sidebar">
     <div class="brand">
-      <span class="logo"><img src="assets/fox.svg" alt="Fox"></span>
+      <span class="logo"><img src="/assets/fox.svg" alt="Fox"></span>
       <span class="brand-text"><b>Janorovic Volkov</b></span>
     </div>
     <nav>
@@ -23,7 +23,7 @@
       <a href="profil" class="active">Profil</a>
       <a href="perkakas">Perkakas</a>
       <a href="kontak">Kontak</a>
-      <a href="penyangkalan">Penyangkalan</a>
+      <a href="penafian">Penafian</a>
       <hr><br>      
       <footer>
         <small><b>© <span id="year"></span> • Janorovic Volkov</b></small>
