Update links in profil/index.html to include leading slash

--- a/profil/index.html
+++ b/profil/index.html
@@ -20,10 +20,10 @@
     </div>
     <nav>
       <a href="/">Beranda</a>
-      <a href="profil" class="active">Profil</a>
-      <a href="perkakas">Perkakas</a>
-      <a href="kontak">Kontak</a>
-      <a href="penafian">Penafian</a>
+      <a href="/profil" class="active">Profil</a>
+      <a href="/perkakas">Perkakas</a>
+      <a href="/kontak">Kontak</a>
+      <a href="/penafian">Penafian</a>
       <hr><br>      
       <footer>
         <small><b>© <span id="year"></span> • Janorovic Volkov</b></small>
