--- a/profil/index.html
+++ b/profil/index.html
@@ -36,12 +36,11 @@
   </aside>
   <main class="content">
     <section class="profile">
-      <div class="avatar">
-        <img src="/assets/janorovicvolkov.png" alt="Persona">
-        <span class="badge">Human-Fox</span>
+      <div class="icon">
+        <img src="/assets/profile.svg" alt="Profil">
       </div>
       <div class="bio">
-        <h1>Janorovic Volkov</h1>
+        <h1>Profil</h1>
         <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
 anti-vandalisme, dan informatif ramah komunitas.
 Menyukai sistem yang rapih, transparan, dan manusiawi.</p>
