--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ satu jam hasil operasi militer, dan satu hari nasib negara”</b></p>
         <h2>Alexander Suvorov</h2>
       </div>
     </section>
+    <hr>
+    <section class="profile">
+      <h2>Saat ini belum ada konten yang ditambahkan. :D</h2>
+    </section>
   </main>
 </div>
 <script src="script.js"></script>
