--- a/profil/index.html
+++ b/profil/index.html
@@ -42,9 +42,11 @@
       <div class="bio">
         <h1>Profil</h1>
         <br>
-        <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
-anti-vandalisme, dan informatif ramah komunitas.
-Menyukai sistem yang rapih, transparan, dan manusiawi.</p>
+        <h2>Biografi singkat</h2>
+        <br>
+        <p><b>Janorovic Volkov</b> adalah nama pena dari Radit Jibril Irawan. 
+          Ia merupakan kontributor Wikipedia bahasa Indonesia sejak tahun 2021 
+          dan menjadi pengurus sejak tahun 2025.</p>
       </div>
     </section>
   </main>
