--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ satu jam hasil operasi militer, dan satu hari nasib negara”</b></p>
     </section>
     <hr>
     <section class="profile">
-      <h2>Saat ini belum ada konten yang ditambahkan. :D</h2>
+      <div class="bio">
+        <h2>Saat ini belum ada konten yang ditambahkan. :D</h2>
+      </div>
     </section>
   </main>
 </div>
