--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <main class="content">
     <section class="profile">
       <div class="avatar">
-        <img src="assets/janorovicvolkov.png" alt="Persona">
+        <img src="assets/tomoe.svg" alt="Tomoe">
         <span class="badge">Human-Fox</span>
       </div>
       <div class="bio">
