--- a/profil/index.html
+++ b/profil/index.html
@@ -46,7 +46,10 @@
         <br>
         <p><b>Janorovic Volkov</b> adalah nama pena dari Radit Jibril Irawan. 
           Ia merupakan kontributor Wikipedia bahasa Indonesia sejak tahun 2021 
-          dan menjadi pengurus sejak tahun 2025.</p>
+          dan menjadi <a href="https://id.wikipedia.org/wiki/Wikipedia:Pengurus">pengurus</a> sejak tahun 2025.
+          <br><br>Saat ini, ia menempuh pendidikan Sekolah Menengah Kejuruan Teknik Pemesinan 
+          dan akan melanjutkan ke Perguruan Tinggi.
+        </p>
       </div>
     </section>
   </main>
