--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </div>
       <div class="bio">
         <h1>Janorovic Volkov</h1>
-        <h2>Wikimedia Toolsmith & Fox-minded Engineer</h2>
-        <p>Pengembang perkakas Wikimedia dengan fokus pada automasi,
-anti-vandalisme, dan informatif ramah komunitas.
-Menyukai sistem yang rapih, transparan, dan manusiawi.</p><br><hr><br>
+        <h2>Wikipedia Toolsmith and Fox-minded Engineer</h2>
+        <p>Pengembang perkakas Wikipedia bahasa Indonesia dengan fokus pada automasi,
+anti-vandalisme, dan informatif.
+Menyukai sistem yang rapi, transparan, dan manusiawi.</p><br><hr><br>
         <p><b>”Teknologi memberi kekuatan, filsafat memberi arah,
 keduanya bersatu dalam tangan mereka yang berani menggenggam masa depan”</b></p>
         <h2>Janorovic Volkov</h2><br>
