Add image to profile section in index.html

--- a/profil/index.html
+++ b/profil/index.html
@@ -36,6 +36,9 @@
   </aside>
   <main class="content">
     <section class="profile">
+      <br>
+      <center></center><img src="/assets/wiki.jpeg" alt="Wiki"></center>
+      <br>
       <div class="icon">
         <img src="/assets/profile.svg" alt="Profil">
       </div>
